--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 <IfModule mod_rewrite.c>
-    RewriteBase /~88485/eportfolio/v1
+    RewriteBase /~db88485/eportfolio/v1
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule (.*)$ api.php?request=$1 [QSA,L,PT,NS]
 </IfModule>
